tests/duplicate_name/duplicate_name.exp
Error ---------------------------------------------------------------------------------- exported_class_and_type.js:4:13

Cannot declare `A` [1] because the name is already bound. [name-already-bound]

   exported_class_and_type.js:4:13
   4| export type A = number; // ERROR
                  ^

References:
   exported_class_and_type.js:3:14
   3| export class A {}
                   ^ [1]


Error ---------------------------------------------------------------------------------- exported_class_and_type.js:6:13

Cannot declare `B` [1] because the name is already bound. [name-already-bound]

   exported_class_and_type.js:6:13
   6| export type B = number;
                  ^

References:
   exported_class_and_type.js:7:14
   7| export class B {} // ERROR
                   ^ [1]


Error ------------------------------------------------------------------------------ exported_enum_and_interface.js:4:18

Cannot declare `A` [1] because the name is already bound. [name-already-bound]

   exported_enum_and_interface.js:4:18
   4| export interface A {} // ERROR
                       ^

References:
   exported_enum_and_interface.js:3:13
   3| export enum A { X = 'x' }
                  ^ [1]


Error ------------------------------------------------------------------------------ exported_enum_and_interface.js:6:18

Cannot declare `B` [1] because the name is already bound. [name-already-bound]

   exported_enum_and_interface.js:6:18
   6| export interface B {}
                       ^

References:
   exported_enum_and_interface.js:7:13
   7| export enum B { X = 'x' } // ERROR
                  ^ [1]


Error ----------------------------------------------------------------------------------- exported_enum_and_type.js:4:13

Cannot declare `A` [1] because the name is already bound. [name-already-bound]

   exported_enum_and_type.js:4:13
   4| export type A = number; // ERROR
                  ^

References:
   exported_enum_and_type.js:3:13
   3| export enum A { X = 'x' }
                  ^ [1]


Error ----------------------------------------------------------------------------------- exported_enum_and_type.js:6:13

Cannot declare `B` [1] because the name is already bound. [name-already-bound]

   exported_enum_and_type.js:6:13
   6| export type B = number;
                  ^

References:
   exported_enum_and_type.js:7:13
   7| export enum B { X = 'x' } // ERROR
                  ^ [1]



Found 6 errors
